--- a/flaskblog/templates/profile.html
+++ b/flaskblog/templates/profile.html
@@ -6,6 +6,9 @@
         <div class="media-body">
             <h2 class="account-heading">{{ current_user.username }}</h2>
             <p class="text-secondary">{{ current_user.email }}</p>
+            <div>
+                <a class="btn btn-secondary btn-sm mt-2 mb-2" href="{{url_for('reset_password', token='self')}}">Change Password</a>
+            </div>
         </div>
         </div>
         <form method="POST" action="" novalidate enctype="multipart/form-data">
