--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -41,13 +41,13 @@
                 {{ form.submit(class="btn btn-outline-info")}}
             </div>
             <small class="text-muted ml-2">
-                <a href="{{ url_for('request_password_reset') }}">Forgot Password?</a>
+                <a href="{{ url_for('users.request_password_reset') }}">Forgot Password?</a>
             </small>
         </form>
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Do You Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up</a>
+            Do You Need An Account? <a class="ml-2" href="{{ url_for('users.register') }}">Sign Up</a>
         </small>
     </div>
 {% endblock content %}
