--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -4,11 +4,11 @@
         <img class="rounded-circle article-img" src="{{ post.author.image_file }}" >
         <div class="media-body">
             <div class="article-metadata">
-            <a class="mr-2" href="#">{{ post.author.username }}</a>
+            <a class="mr-2" href="{{ url_for('users.user', username=post.author.username )}}">{{ post.author.username }}</a>
             <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 {% if post.author == current_user %}
                     <div>
-                        <a class="btn btn-secondary btn-sm mt-2 mb-2" href="{{ url_for('update_post', id=post.id) }}">Update</a>
+                        <a class="btn btn-secondary btn-sm mt-2 mb-2" href="{{ url_for('posts.update_post', id=post.id) }}">Update</a>
                         <button type="button" class="btn btn-danger btn-sm mt-2 mb-2" data-toggle="modal" data-target="#confirmModal">Delete</button>
                     </div>
                 {% endif %}
@@ -32,7 +32,7 @@
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancle</button>
-            <form action="{{ url_for('delete_post', id=post.id) }}" method="POST">
+            <form action="{{ url_for('posts.delete_post', id=post.id) }}" method="POST">
                 <input class="btn btn-danger" type="submit" value="Delete">
             </form>
             </div>
