Fixed environemt variable related bug and Changed title

--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -11,7 +11,7 @@
     {% if title %}
         <title>{{ title }}</title>
     {% else%}
-        <title>Flask Blog</title>
+        <title>Mini Blog</title>
     {% endif %}
 </head>
 <body>
