--- a/flaskblog/templates/user.html
+++ b/flaskblog/templates/user.html
@@ -1,28 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1 class="mb-3">Posts by {{ user.username }} ({{ posts.total }}) </h1>
-    {% for post in posts.items %}
-        <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ post.author.image_file }}" >
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="{{ url_for('users.user', username=post.author.username )}}">{{ post.author.username }}</a>
-              <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
-            </div>
-            <h2><a class="article-title" href="{{ url_for('posts.post', id=post.id) }}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+  <div class="content-section">
+    <div class="media">
+    <img class="rounded-circle account-img" src="{{ user.image_file }}">
+    <div class="media-body">
+        <h2 class="account-heading">{{ user.username }}</h2>
+    </div>
+    </div>
+  </div>
+  <h1 class="mb-3">Posts by {{ user.username }} ({{ posts.total }}) </h1>
+  {% for post in posts.items %}
+      <article class="media content-section">
+        <img class="rounded-circle article-img" src="{{ post.author.image_file }}" >
+        <div class="media-body">
+          <div class="article-metadata">
+            <a class="mr-2" href="{{ url_for('users.user', username=post.author.username )}}">{{ post.author.username }}</a>
+            <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
           </div>
-        </article>
-    {% endfor %}
-    {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-        {% if page_num %}
-          {% if posts.page == page_num %}
-            <a href="{{ url_for('users.user', username=user.username, page=page_num) }}" class="btn btn-info mb-4">{{ page_num }}</a>
-          {% else %}
-            <a href="{{ url_for('users.user', username=user.username, page=page_num) }}" class="btn btn-outline-info mb-4">{{ page_num }}</a>
-          {% endif %}
+          <h2><a class="article-title" href="{{ url_for('posts.post', id=post.id) }}">{{ post.title }}</a></h2>
+        </div>
+      </article>
+  {% endfor %}
+  {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+      {% if page_num %}
+        {% if posts.page == page_num %}
+          <a href="{{ url_for('users.user', username=user.username, page=page_num) }}" class="btn btn-info mb-4">{{ page_num }}</a>
         {% else %}
-          <span>...</span>
+          <a href="{{ url_for('users.user', username=user.username, page=page_num) }}" class="btn btn-outline-info mb-4">{{ page_num }}</a>
         {% endif %}
-    {% endfor %}
+      {% else %}
+        <span>...</span>
+      {% endif %}
+  {% endfor %}
 {% endblock content %}
