--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -22,7 +22,7 @@
                 <p>Likes: {{likes}}</p>
             </div>
             <h2 class="article-title">{{ post.title }}</h2>
-            <div class="cke_editable cke_editable_themed cke_contents_ltr cke_show_borders">
+            <div class="cke_editable cke_editable_themed cke_contents_ltr cke_show_borders post-container">
                 {{ post.content | safe }}
             </div>
         </div>
