Minor Improvements and bug Fixes

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>About</h1>
+    <br>
+    <h5>A Mini blogging app made for fun.</h5>
+    <p>I made this to learn web development using flask.</p>
+    <p>- Siddharth Roy</p>
 {% endblock content %}
