--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -62,8 +62,10 @@
               <h3>Browse</h3>
               <p class='text-muted'>Browse other section
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-light">Latest Posts</li>
-                  <li class="list-group-item list-group-item-light">Announcements</li>
+                  <li class="list-group-item list-group-item-light">
+                    <a href="{{ url_for('main.home') }}">Latest Posts</a></li>
+                  <li class="list-group-item list-group-item-light">
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Announcements</a></li>
                   <li class="list-group-item list-group-item-light">
                     <a href="https://github.com/siddharthroy12">Who made this?</a>
                   </li>
