--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -30,7 +30,7 @@
     <form method="POST" action="" novalidate>
         {{ comment_form.hidden_tag() }}
         <fieldset class="from-group">
-            <legend class="border-bottom mb-4">Comment</legend>
+            <legend class="border-bottom mb-4">Reviews</legend>
             
             <div class="form-group">
                 {{ comment_form.content.label(class="form-control-label") }}
